switched from preallocated list